--- a/excursion/index.html
+++ b/excursion/index.html
@@ -1,14 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-</head>
-<body>
-  <h1>Discover hidden places in the world around you</h1>
-  <p class="download"><a>Download Excursion (Coming soon!)</a></p>
-  
-</body>
+
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Excursion</title>
+    <link rel="stylesheet" href="./css/style.css">
+  </head>
+
+  <body>
+    <h1>Discover hidden places in the world around you</h1>
+    <p><a class="download" href="">Download Excursion (Coming soon!)</a></p>
+    <video controls loop src="./resources/excursion.mp4" autoplay poster="posterimage.jpg">
+    </video>
+    <h2>Your personal travel guide</h2>
+    <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+    <img id="camp" src="./resources/camp.jpg" alt="Camping">
+    <img src="./resources/phone.png" alt="Phone">
+    <h2>Coming Soon for iPhone and Android</h2>
+    <p><a class="download" href="">Download Excursion (Coming soon!)</a></p>
+
+  <footer>
+    <p>&copy Excursion</p>
+  </footer>
+
+  </body>
 </html>
